# mini-scikit-learn

./: .gitignore  Introduccion.md  Makefile  README.md  plan.md  pyproject.toml  run_tests.py
mini_sklearn/: __init__.py  base.py  ensemble.py  metrics.py  model_selection.py  pipeline.py  preprocessing.py
tests/: conftest.py  test_minmax_ab.py  test_negative_cases.py  test_pipeline_ab.py  test_random_forest_ab.py  test_split_stratified_ab.py
